# --------------------------------------------------------------------------
# General

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)

PROJECT(st-base)

SET( STBASE_MAJOR_VERSION 1 )
SET( STBASE_MINOR_VERSION 0 )
SET( STBASE_PATCH_LEVEL 0 )
SET( STBASE_VERSION ${STBASE_MAJOR_VERSION}.${STBASE_MINOR_VERSION}.${STBASE_PATCH_LEVEL} )
#Indicates compatibility
SET( STBASE_SO_VERSION ${STBASE_MAJOR_VERSION}.${STBASE_MINOR_VERSION} )

# --------------------------------------------------------------------------
# Preproject variables.

IF(APPLE)
	SET(ST_APP_PATH "${ST_APP_NAME}.app")
#	MESSAGE(SEND_ERROR "AppPath: ${ST_APP_PATH} .")

ENDIF(APPLE)

# --------------------------------------------------------------------------
# Translations

IF(NOT ST_LOCALES_OUTPUT_PATH)
	IF(WIN32 AND NOT UNIX)
		SET ( ST_LOCALES_OUTPUT_PATH bin )
	ELSE(WIN32 AND NOT UNIX)
		IF(APPLE)
			SET ( ST_LOCALES_OUTPUT_PATH ${ST_APP_PATH}/Contents/MacOS )
		ELSE(APPLE) #UNIX
			SET ( ST_LOCALES_OUTPUT_PATH bin/${PROJECT_NAME}_stlocale )
		ENDIF(APPLE)
	ENDIF(WIN32 AND NOT UNIX)
ENDIF(NOT ST_LOCALES_OUTPUT_PATH)

IF(UNIX AND NOT APPLE)
	SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS "ST_LOCALE_PATH=\"${PROJECT_NAME}_stlocale\"")
ELSE(UNIX AND NOT APPLE)
	SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS "ST_LOCALE_PATH=\"\"")
ENDIF(UNIX AND NOT APPLE)

# --------------------------------------------------------------------------
# Docs

OPTION(STBASE_INSTALL_DOCS
  "Install documentation"
  OFF)

OPTION(BUILD_DOCS
	"Build documentation"
OFF)

# --------------------------------------------------------------------------
# Installation dirs

IF(NOT STBASE_LIBRARY_OUTPUT_PATH)
	IF(WIN32 AND NOT UNIX)
		SET ( STBASE_LIBRARY_OUTPUT_PATH bin )
	ELSE(WIN32 AND NOT UNIX)
		IF(APPLE)
			SET ( STBASE_LIBRARY_OUTPUT_PATH ${ST_APP_PATH}/Contents/MacOS )
			SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${${ST_APP_NAME}_BINARY_DIR}/${ST_APP_PATH}/Contents/MacOS )
		ELSE(APPLE) #UNIX
			SET ( STBASE_LIBRARY_OUTPUT_PATH lib/${PROJECT_NAME} )
		ENDIF(APPLE)
	ENDIF(WIN32 AND NOT UNIX)
ENDIF(NOT STBASE_LIBRARY_OUTPUT_PATH)

#SET(${ST_APP_NAME}_LIBRARY_DIRS ${LIBRARY_OUTPUT_DIRECTORY})
#SET(${ST_APP_NAME}_RUNTIME_DIRS ${LIBRARY_OUTPUT_DIRECTORY})

#IF(NOT RUNTIME_OUTPUT_DIRECTORY)
#  SET(RUNTIME_OUTPUT_DIRECTORY ${${PROJECT_NAME}_BINARY_DIR}/bin CACHE INTERNAL
#    "Single output directory for building all executables.")
#ENDIF(NOT RUNTIME_OUTPUT_DIRECTORY)



# --------------------------------------------------------------------------
# Dependences

#Check for Qt
SET(QT_REQUIRED TRUE)
SET(QT_MIN_VERSION "4.2.2")
FIND_PACKAGE(Qt4)

IF(NOT QT4_FOUND)
  MESSAGE(SEND_ERROR "Qt ${QT_MIN_VERSION} or greater not found.  Please check the QT_QMAKE_EXECUTABLE variable.")
ELSE(NOT QT4_FOUND)

# --------------------------------------------------------------------------
# Miscelanea

OPTION(USE_PRINTKEEPER
  "Use printkeeper to check printer access"
  ON)

IF(USE_PRINTKEEPER)
		ADD_SUBDIRECTORY(printkeeper)
		SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS "USE_PRINTKEEPER" )
		INCLUDE_DIRECTORIES( ${st_printkeeper_SOURCE_DIR} )
		INCLUDE_DIRECTORIES( ${st_printkeeper_BINARY_DIR} )
		SET (PRINTKEEPER_LIBS st_printkeeper)
ENDIF(USE_PRINTKEEPER)

# --------------------------------------------------------------------------
# Calc Dependences

IF(ST_USE_WIZARDS)
	SET (ST_USE_PHOTOTEMPLATES TRUE)
ENDIF(ST_USE_WIZARDS)

IF(ST_USE_PHOTOTEMPLATES)
	SET (ST_USE_IMAGELIB TRUE)
	SET (ST_USE_WIDGETS TRUE)
	SET (ST_USE_DOM TRUE)
ENDIF(ST_USE_PHOTOTEMPLATES)

IF(ST_USE_DOM)
	SET (ST_USE_METADATA TRUE)
	SET (ST_USE_DATABASE TRUE)
	SET (ST_USE_TICKETPRINTER TRUE)
	SET (ST_USE_IMAGELIB TRUE)
	SET (ST_USE_WIDGETS TRUE)
ENDIF(ST_USE_DOM)

IF(ST_USE_IMAGELIB)
	SET (ST_USE_WIDGETS TRUE)
ENDIF(ST_USE_IMAGELIB)

IF(ST_USE_TICKETPRINTER)
	SET (ST_USE_WIDGETS TRUE)
	SET (ST_USE_OPENRPT TRUE)
	SET (ST_USE_SERIALPORT TRUE)
ENDIF(ST_USE_TICKETPRINTER)

IF(ST_USE_DBMANAG)
	SET (ST_USE_METADATA TRUE)
ENDIF(ST_USE_DBMANAG)

IF(ST_USE_METADATA)
	SET (ST_USE_DATABASE TRUE)
ENDIF(ST_USE_METADATA)

IF(ST_USE_DATABASE)
	SET (ST_USE_WIDGETS TRUE)
ENDIF(ST_USE_DATABASE)

IF(ST_USE_BURNING)
	SET (ST_USE_WIDGETS TRUE)
ENDIF(ST_USE_BURNING)

IF(ST_USE_DIGIKAM)
	SET (ST_USE_WIDGETS TRUE)
	SET (ST_USE_KDCRAW TRUE)
	SET (ST_USE_KEXIV2 TRUE)
ENDIF(ST_USE_DIGIKAM)

# --------------------------------------------------------------------------
# Sub Projects

ADD_SUBDIRECTORY(core)
IF(ST_USE_WIDGETS)
	SET (ST_USE_WIDGETS TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(widgets)
ENDIF(ST_USE_WIDGETS)

IF(ST_USE_IMAGELIB)
	SET (ST_USE_IMAGELIB TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(imagelib)
ENDIF(ST_USE_IMAGELIB)

IF(ST_USE_KEXIV2)
	SET (ST_USE_KEXIV2 TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(kexiv2)
ENDIF(ST_USE_KEXIV2)

IF(ST_USE_KDCRAW)
	SET (ST_USE_KDCRAW TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(kdcraw)
ENDIF(ST_USE_KDCRAW)

IF(ST_USE_DATABASE)
	SET (ST_USE_DATABASE TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(database)
ENDIF(ST_USE_DATABASE)

IF(ST_USE_METADATA)
	SET (ST_USE_METADATA TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(metadata)
ENDIF(ST_USE_METADATA)

IF(ST_USE_DBMANAG)
	SET (ST_USE_DBMANAG TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(dbmanag)
ENDIF(ST_USE_DBMANAG)

IF(ST_USE_OPENRPT)
	SET (ST_USE_OPENRPT TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(openrpt)
ENDIF(ST_USE_OPENRPT)

IF(ST_USE_SERIALPORT)
	SET (ST_USE_SERIALPORT TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(serialport)
ENDIF(ST_USE_SERIALPORT)

IF(ST_USE_TICKETPRINTER)
	SET (ST_USE_TICKETPRINTER TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(ticketprinter)
ENDIF(ST_USE_TICKETPRINTER)

IF(ST_USE_PRINTKEEPER)
	SET (ST_USE_PRINTKEEPER TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(printkeeper)
ENDIF(ST_USE_PRINTKEEPER)

IF(ST_USE_BURNING)
	SET (ST_USE_BURNING TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(burning)
ENDIF(ST_USE_BURNING)

IF(ST_USE_DIGIKAM)
	SET (ST_USE_DIGIKAM TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(digikam)
ENDIF(ST_USE_DIGIKAM)

IF(ST_USE_DOM)
	SET (ST_USE_DOM TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(dom)
ENDIF(ST_USE_DOM)

IF(ST_USE_PHOTOTEMPLATES)
	SET (ST_USE_PHOTOTEMPLATES TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(phototemplates)
ENDIF(ST_USE_PHOTOTEMPLATES)

IF(ST_USE_WIZARDS)
	SET (ST_USE_WIZARDS TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(wizards)
ENDIF(ST_USE_WIZARDS)

IF(ST_USE_OOFFICE)
	SET (ST_USE_OOFFICE TRUE PARENT_SCOPE)
	ADD_SUBDIRECTORY(ooffice)
ENDIF(ST_USE_OOFFICE)

ADD_SUBDIRECTORY(data)

IF(BUILD_DOCS)
	ADD_SUBDIRECTORY(doc)
ENDIF(BUILD_DOCS)

ENDIF(NOT QT4_FOUND)
