# --------------------------------------------------------------------------
# General

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

# --------------------------------------------------------------------------
# Sub Projects
ADD_SUBDIRECTORY(database)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(gui)
ADD_SUBDIRECTORY(printing)
ADD_SUBDIRECTORY(io)
ADD_SUBDIRECTORY(dom)


